# viettel_internship

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
week1/: 1_Programming_With_C++.rar  arrays.cpp  bee.cpp  calculator.c  calculator_ASM.cpp  report.md  thuvien.c
week2/: report.md
week2/debug_build_x86/: arrays.idb  bee.idb  calculator.idb  calculator_ASM.idb  thuvien.idb
week2/release_build_x86/: arrays.idb  bee.idb  bee_virtual.idb  calculator.idb  calculator_ASM.idb  thuvien.idb
week3/: screenshot.cpp  sss.cpp  trojan_sss.cpp
week4-5/: report.md
week4-5/Anti-Debug/: CheckRemoteDebuggerPresent.cpp  IsDebuggerPresent.cpp  NtQueryInformationProcess.cpp  PEBBeingDebugged.cpp  PEBNtGlobalFlag.cpp  PEBProcessHeap.cpp  SEH.cpp  VEH.cpp
week4-5/Challs/: AntiqueRev.i64
week6/: freenki.js  freenki.yara  freenki_hack.py  hacked.cpp  note.md  ollydbg_backup_2.bak  report.md
week8/: report.md
